[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/main/SpecificNodes/DamageDetector/DamageDetector.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/SpecificNodes/SpritesWithFlash/Standard/SpriteFlash.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/PlaceHolders/dummy.png" type="Texture" id=3]
[ext_resource path="res://src/main/BaseResources/HitPoints/HitPoints.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/BaseEnemy/BaseEnemy.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true

[node name="BaseEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 5 )

[node name="Sprite" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -24 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DamageDetector" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -16 )
collision_layer = 2147483650
collision_mask = 40

[node name="HitPoints" parent="." instance=ExtResource( 4 )]
[connection signal="get_damage" from="DamageDetector" to="." method="_on_DamageDetector_get_damage"]
[connection signal="value_decreased" from="HitPoints" to="." method="_on_HitPoints_value_decreased"]
[connection signal="value_zero" from="HitPoints" to="." method="_on_HitPoints_value_zero"]
